# devpulse

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: commit-messages.mdc
devpulse/: __init__.py  cli.py  config.py  daemon.py  db.py
devpulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
devpulse/analyzers/: __init__.py  context_restorer.py  context_switch.py  error_memory.py  focus_guard.py  time_tracker.py  toil.py  workflow_predictor.py
devpulse/bootstrap/: ollama_setup.py
devpulse/collectors/: __init__.py  git_collector.py  shell.py
devpulse/llm/: base.py  claude_provider.py  ollama_provider.py
devpulse/rag/: __init__.py  embed_factory.py  embed_local.py  embed_ollama.py  embed_openai.py  embeddings.py  fix_tracker.py  vector_store.py
devpulse/ui/: __init__.py  dashboard.py
devpulse/ui/tui/: app.py  data.py
devpulse/ui/tui/screens/: config.py  fixes.py  focus.py  insights.py  profile.py  projects.py  today.py  toil.py  week.py
devpulse/ui/tui/widgets/: __init__.py  bar_chart.py  heatmap.py  panel.py  stat_card.py  switch_chart.py
devpulse/web/: server.py
devpulse/web/static/: index.html
ghost_pulse/: __init__.py  cli.py  config.py  daemon.py  db.py
ghost_pulse/analyzers/: context_restorer.py  context_switch.py  developer_fingerprint.py  error_memory.py  focus_guard.py  time_tracker.py  toil.py  workflow_predictor.py
ghost_pulse/bootstrap/: __init__.py  ollama_setup.py
ghost_pulse/collectors/: file_watcher.py  git_collector.py  shell.py  window.py
ghost_pulse/generators/: __init__.py  report_gen.py  script_gen.py
ghost_pulse/llm/: __init__.py  base.py  claude_provider.py  factory.py  groq_provider.py  ollama_provider.py  openai_provider.py
ghost_pulse/rag/: __init__.py  embed_factory.py  embed_local.py  embed_ollama.py  embed_openai.py  fix_tracker.py  retriever.py  vector_store.py
ghost_pulse/ui/: dashboard.py
ghost_pulse/ui/tui/: __init__.py  app.py  data.py  vim_scroll.py
ghost_pulse/ui/tui/screens/: __init__.py  config.py  fixes.py  focus.py  insights.py  profile.py  projects.py  today.py  toil.py  week.py
ghost_pulse/ui/tui/widgets/: __init__.py  bar_chart.py  sparkline.py  stat_card.py  switch_chart.py
ghost_pulse/web/: server.py
ghost_pulse/web/static/: index.html
scripts/: install.sh  real_life_fix_scenario.py
shell/: ghost.bash  ghost.zsh
tests/: test_analyzers.py  test_collectors.py  test_context_restorer.py  test_db.py  test_developer_fingerprint.py  test_embedding_providers.py  test_error_memory.py  test_fix_lifecycle.py  test_fix_tracker.py  test_focus_guard.py  test_llm_providers.py  test_ollama_bootstrap.py  test_retriever.py  test_vector_store.py  test_workflow_predictor.py
