[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devpulse"
version = "0.1.0"
description = "A privacy-first CLI developer productivity copilot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DevPulse Contributors" }]
keywords = ["developer", "productivity", "cli", "analytics"]

[project.urls]
Homepage = "https://github.com/sarath-m-s/devpulse"
Repository = "https://github.com/sarath-m-s/devpulse"
Issues = "https://github.com/sarath-m-s/devpulse/issues"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "watchdog>=4.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
groq = ["groq>=0.11"]
all = ["anthropic>=0.40", "openai>=1.50", "groq>=0.11"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
devpulse = "devpulse.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["devpulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["devpulse"]
omit = ["tests/*"]
