[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-pulse"
version = "3.1.0"
description = "A privacy-first CLI developer productivity copilot with intelligence layer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ghost Pulse Contributors" }]
keywords = ["developer", "productivity", "cli", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.79",
    "watchdog>=4.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/sarath-m-s/ghost-pulse"
Repository = "https://github.com/sarath-m-s/ghost-pulse"
Issues = "https://github.com/sarath-m-s/ghost-pulse/issues"

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
groq = ["groq>=0.11"]
embeddings = [
    "sentence-transformers>=2.7",
    "numpy>=1.26",
]
rag = [
    "sentence-transformers>=2.7",
    "numpy>=1.26",
]
all = ["anthropic>=0.40", "openai>=1.50", "groq>=0.11", "sentence-transformers>=2.7", "numpy>=1.26"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
ghost = "ghost_pulse.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghost_pulse*"]

[tool.setuptools.package-data]
ghost_pulse = ["web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ghost_pulse"]
omit = ["tests/*"]
